--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
+    "start:db": "npm-run-all --parallel serve start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "tsc --noEmit && eslint '*/**/*.{js,ts,tsx}' --quiet --fix"
+    "lint": "tsc --noEmit && eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
+    "serve": "json-server --watch db.json -d 2000 -p 3001"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -62,6 +64,8 @@
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.2",
     "eslint-plugin-react-hooks": "^1.6.0",
+    "json-server": "^0.15.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2",
     "typescript": "^3.4.5"
   }
